# cub3d

./: .gitignore  CMakeLists.txt  Makefile  cub3D  temp_map.cub
includes/: cub.h  cub3d.h  execution.h  parser.h
lib/libft/: Makefile  ft_isspace.c  libft.h
lib/libft/gnl/: get_next_line_bonus.c  get_next_line_bonus.h  get_next_line_utils_bonus.c
lib/libft/my_old_gnl/: get_next_line_bonus.c  get_next_line_bonus.h
maps/: hard_map.cub  no_cub_file.cub2  subject.test  test_map.cub  test_map2.cub
srcs/: main.c  player.c  test_minilibx.c
srcs/execution/: init.c  key_inputs.c  norminette_suggs.c  old_exec_main.c  raycasting.c  render.c  textures.c  utils.c
srcs/parser/: Makefile  fd_utils.c  main.c  parser_color.c  parser_color_utils.c  parser_extract_map.c  parser_extract_map_utils.c  parser_free_utils.c  parser_init.c  parser_map_validation.c  parser_map_validation_utils.c  parser_read_map.c  parser_read_map_utils.c  parser_test.c  parser_textures.c  parser_textures_utils.c  parser_utils.c  print_utils.c
srcs/parser/test_maps/: test_map.cub  test_map2.cub
test_srcs/: buffer_utils.c  fd_utils.c  parser_color.c  parser_color_utils.c  parser_extract.c  parser_extract_map.c  parser_extract_map_utils.c  parser_free_utils.c  parser_map_utils.c  parser_map_validation.c  parser_read_map.c  parser_test.c  parser_textures.c  parser_textures_utils.c  parser_utils.c  print_utils.c  test.c  test_map.cub  visualize_test.c
textures/: wall_EA.xpm  wall_NO.xpm  wall_SO.xpm  wall_WE.xpm
unused/: draw_vertical_line.c  main.c  minimap.c  parser_test_with_map_check.c  raycasting(old).c  test_minilibx.h
